--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <!-- Header/Hero Section -->
     <header class="hero">
         <div class="hero-image">
-            <img src="https://images.pexels.com/photos/2528118/pexels-photo-2528118.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1080&fit=crop" alt="Fachada da Naldo Bebidas" loading="eager">
+            <img src="assets/frente.png" alt="Fachada da Naldo Bebidas" loading="eager">
             <div class="hero-overlay"></div>
         </div>
         <div class="hero-content">
             <div class="container">
-                <h1 class="hero-title">Sua bebida, no seu tempo</h1>
+                <h1 class="hero-title">Bebidas Gelada em Minutos na Sua Casa</h1>
                 <p class="hero-subtitle">Delivery e Retirada na hora</p>
-                <p class="hero-description">Parceiro oficial Zé Delivery | 5 anos no mercado</p>
+                <p class="hero-description">Parceiro oficial Zé Delivery | 6 anos no mercado</p>
                 <div class="hero-buttons">
                     <a href="https://wa.me/5599984340817" class="btn btn-primary" target="_blank" rel="noopener">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -43,7 +43,7 @@
                         Pedir pelo WhatsApp
                     </a>
                     <a href="https://www.ze.delivery/" class="btn btn-secondary" target="_blank" rel="noopener">
-                        <span class="ze-logo-btn">Zé</span>
+                        
                         Pedir pelo Zé Delivery
                     </a>
                 </div>
@@ -57,7 +57,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>Nossa História</h2>
-                    <p>Há 5 anos no mercado, começamos de forma simples e hoje somos uma distribuidora estruturada, com atendimento rápido e variedade de bebidas.</p>
+                    <p>Há 6 anos no mercado, começamos de forma simples e hoje somos uma distribuidora estruturada, com atendimento rápido e variedade de bebidas.</p>
                     <p>Nossa missão é levar até você as melhores bebidas com rapidez e qualidade. Trabalhamos com delivery próprio e somos parceiros oficiais do Zé Delivery para maior comodidade.</p>
                     <div class="about-features">
                         <div class="feature">
@@ -70,16 +70,16 @@
                         </div>
                         <div class="feature">
                             <div class="feature-icon">⭐</div>
-                            <span>5 Anos de Experiência</span>
+                            <span>6 Anos de Experiência</span>
                         </div>
                     </div>
                 </div>
                 <div class="about-images">
                     <div class="about-image">
-                        <img src="https://images.pexels.com/photos/1267362/pexels-photo-1267362.jpeg?auto=compress&cs=tinysrgb&w=600&h=400&fit=crop" alt="Interior da Naldo Bebidas" loading="lazy">
+                        <img src="assets/1.png" alt="Interior da Naldo Bebidas" loading="lazy">
                     </div>
                     <div class="about-image">
-                        <img src="https://images.pexels.com/photos/2406949/pexels-photo-2406949.jpeg?auto=compress&cs=tinysrgb&w=600&h=400&fit=crop" alt="Variedade de bebidas na Naldo Bebidas" loading="lazy">
+                        <img src="assets/2.png" alt="Variedade de bebidas na Naldo Bebidas" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -94,59 +94,59 @@
             <div class="categories-grid">
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/4916166/pexels-photo-4916166.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Whisky premium" loading="lazy">
+                        <img src="assets/whisky.png" alt="Whisky premium" loading="lazy">
                     </div>
                     <h3>Whisky</h3>
                     <p>Seleção premium</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/1552630/pexels-photo-1552630.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Cervejas e long necks" loading="lazy">
+                        <img src="assets/cervejas.png" alt="Cervejas e long necks" loading="lazy">
                     </div>
                     <h3>Cervejas</h3>
-                    <p>Long neck e latas</p>
+                    <p>600ml, Long neck e latas</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/1407846/pexels-photo-1407846.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Vinhos e champanhes" loading="lazy">
+                        <img src="assets/vinhos.png" alt="Vinhos e champanhes" loading="lazy">
                     </div>
                     <h3>Vinhos</h3>
                     <p>Champanhe e chopp de vinho</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/5947020/pexels-photo-5947020.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Gin e destilados" loading="lazy">
+                        <img src="assets/dest.png" alt="Gin e destilados" loading="lazy">
                     </div>
                     <h3>Gin & Destilados</h3>
-                    <p>Cachaça e premium</p>
+                    <p>Cachaças, Vodkas, e Gin</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/5591663/pexels-photo-5591663.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Beats energético" loading="lazy">
+                        <img src="assets/beats.png" alt="Beats energético" loading="lazy">
                     </div>
                     <h3>Beats</h3>
                     <p>Energia para sua festa</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/2087391/pexels-photo-2087391.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Refrigerantes e energéticos" loading="lazy">
+                        <img src="assets/energ.png" alt="Refrigerantes e energéticos" loading="lazy">
                     </div>
-                    <h3>Refrigerantes</h3>
-                    <p>Energéticos, ice e água de coco</p>
+                    <h3>Derivados</h3>
+                    <p>Refrigerantes, Energéticos, Ice e Água de coco</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
-                        <img src="https://images.pexels.com/photos/4198024/pexels-photo-4198024.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Petiscos diversos" loading="lazy">
+                        <img src="assets/pets.png" alt="Petiscos diversos" loading="lazy">
                     </div>
                     <h3>Petiscos</h3>
-                    <p>Cheetos, Doritos, Lays</p>
+                    <p>Pipocas e Amendoins</p>
                 </div>
                 <div class="category-card">
                     <div class="category-image">
                         <img src="https://images.pexels.com/photos/1362534/pexels-photo-1362534.jpeg?auto=compress&cs=tinysrgb&w=400&h=300&fit=crop" alt="Açaí e sorvetes" loading="lazy">
                     </div>
                     <h3>Açaí & Sorvete</h3>
-                    <p>Gelados e gelo</p>
+                    <p>Melhor qualidade</p>
                 </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="address-item">
                     <h3>Funcionamento</h3>
-                    <p>Segunda a Sábado: 08h às 22h<br>Domingo: 08h às 18h</p>
+                    <p>Segunda a Quinta: 10h às 23h<br>Sexta: 10h às 00h<br>Sábado: 09h às 00h<br>Domingo: 09h às 22h</p>
                 </div>
             </div>
         </div>
@@ -243,7 +243,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Naldo Bebidas</h3>
-                    <p>Sua distribuidora de confiança há 5 anos</p>
+                    <p>Sua distribuidora de confiança há 6 anos</p>
                 </div>
                 <div class="footer-section">
                     <h4>Contato</h4>
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Naldo Bebidas. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Naldo Bebidas. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
