--- a/index.html
+++ b/index.html
@@ -28,24 +28,51 @@
     <header class="hero">
         <div class="hero-image">
             <img src="assets/frente.png" alt="Fachada da Naldo Bebidas" loading="eager">
-            <div class="hero-overlay"></div>
         </div>
-        <div class="hero-content">
-            <div class="container">
-                <h1 class="hero-title">Bebidas Gelada em Minutos na Sua Casa</h1>
-                <p class="hero-subtitle">Delivery e Retirada na hora</p>
-                <p class="hero-description">Parceiro oficial Zé Delivery | 6 anos no mercado</p>
-                <div class="hero-buttons">
-                    <a href="https://wa.me/5599984340817" class="btn btn-primary" target="_blank" rel="noopener">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516z" fill="currentColor"/>
-                        </svg>
-                        Pedir pelo WhatsApp
-                    </a>
-                    <a href="https://www.ze.delivery/" class="btn btn-secondary" target="_blank" rel="noopener">
-                        
-                        Pedir pelo Zé Delivery
-                    </a>
+    </header>
+
+    <!-- Hero Content Section -->
+    <section class="hero-content-section">
+        <div class="container">
+            <h1 class="hero-title">Bebidas Gelada em Minutos na Sua Casa</h1>
+            <p class="hero-subtitle">Delivery e Retirada na hora</p>
+            <p class="hero-description">Parceiro oficial Zé Delivery | 6 anos no mercado</p>
+            <div class="hero-buttons">
+                <a href="https://wa.me/5599984340817" class="btn btn-primary" target="_blank" rel="noopener">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.516z" fill="currentColor"/>
+                    </svg>
+                    Pedir pelo WhatsApp
+                </a>
+                <a href="https://www.ze.delivery/" class="btn btn-secondary" target="_blank" rel="noopener">
+                    
+                    Pedir pelo Zé Delivery
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section class="gallery">
+        <div class="container">
+            <h2>Nossa Trajetória</h2>
+            <p class="gallery-subtitle">Momentos marcantes da nossa história</p>
+            <div class="gallery-grid">
+                <div class="gallery-item" data-year="2019">
+                    <img src="assets/frente.png" alt="Fachada da Naldo Bebidas em 2019" loading="lazy">
+                    <div class="year-overlay">2019</div>
+                </div>
+                <div class="gallery-item" data-year="2021">
+                    <img src="assets/1.png" alt="Interior da loja em 2021" loading="lazy">
+                    <div class="year-overlay">2021</div>
+                </div>
+                <div class="gallery-item" data-year="2023">
+                    <img src="assets/2.png" alt="Expansão do estoque em 2023" loading="lazy">
+                    <div class="year-overlay">2023</div>
+                </div>
+                <div class="gallery-item" data-year="2025">
+                    <img src="assets/dentro.png" alt="Estrutura atual em 2025" loading="lazy">
+                    <div class="year-overlay">2025</div>
                 </div>
             </div>
         </div>
@@ -214,7 +241,7 @@
             <p>Venha nos visitar ou receba em casa</p>
             <div class="map-container">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.123456789!2d-44.123456789!3d-4.123456789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2sRua%20Rui%20Mesquita%2C%202356%2C%20Pedreiras%20-%20MA!5e0!3m2!1spt-BR!2sbr!4v1234567890"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.514064157171!2d-44.58808459634985!3d-4.582106064520047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78989b8bef30d87%3A0xd09e1321e5942dba!2sNALDO%20BEBIDAS%20E%20Z%C3%89%20DELIVERY!5e0!3m2!1spt-BR!2sbr!4v1755975956534!5m2!1spt-BR!2sbr"
                     width="100%" 
                     height="400" 
                     style="border:0;" 
