--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             <p class="gallery-subtitle">Momentos marcantes da nossa história</p>
             <div class="gallery-grid">
                 <div class="gallery-item" data-year="2019">
-                    <img src="assets/frente.png" alt="Fachada da Naldo Bebidas em 2019" loading="lazy">
-                    <div class="year-overlay">2019</div>
+                    <img src="assets/1.png" alt="Fachada da Naldo Bebidas em 2019" loading="lazy">
+                    <div class="year-overlay">2020</div>
                 </div>
                 <div class="gallery-item" data-year="2021">
-                    <img src="assets/1.png" alt="Interior da loja em 2021" loading="lazy">
-                    <div class="year-overlay">2021</div>
+                    <img src="assets/2.png" alt="Interior da loja em 2021" loading="lazy">
+                    <div class="year-overlay">2023</div>
                 </div>
                 <div class="gallery-item" data-year="2023">
-                    <img src="assets/2.png" alt="Expansão do estoque em 2023" loading="lazy">
-                    <div class="year-overlay">2023</div>
+                    <img src="assets/frente.png" alt="Expansão do estoque em 2023" loading="lazy">
+                    <div class="year-overlay">2025</div>
                 </div>
                 <div class="gallery-item" data-year="2025">
                     <img src="assets/dentro.png" alt="Estrutura atual em 2025" loading="lazy">
